--- a/public/quest/index.html
+++ b/public/quest/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>Quest Pro | AR Spotlight</title>
-    <script src="/script/aframe/aframe.min.js"></script>
+    <title>Quest Pro | AR Camera</title>
+    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://rawgit.com/blairmacintyre/aframe-look-at-billboard-component/master/dist/aframe-look-at-billboard-component.min.js"></script>
   </head>
 
